<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.Notification.NotificationFragment">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_header"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_l"
        android:paddingTop="@dimen/space_xl"
        android:paddingEnd="@dimen/space_l"
        android:paddingBottom="@dimen/space_l">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_title"
            android:textAppearance="@style/TextAppearance.Omni.HeaderTitle" />
    </LinearLayout>

    <!-- Belum ada data notifikasi, jadi tampilkan tampilan kosong -->
    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_xl"
        android:paddingEnd="@dimen/space_xl"
        android:paddingBottom="@dimen/list_bottom_padding">

        <FrameLayout
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:background="@drawable/background_oval_dashboard">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_notifications"
                app:tint="@color/primary" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:text="@string/empty_notification_title"
            android:textAppearance="@style/TextAppearance.Omni.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:gravity="center"
            android:text="@string/empty_notification_desc"
            android:textAppearance="@style/TextAppearance.Omni.Caption" />
    </LinearLayout>

</LinearLayout>
